<resources>
    <string name="empty"></string>
    <string name="app_name">SWEET TOOTH</string>
    <string name="btn_menu">MENU</string>
    <string name="btn_order">ORDER</string>
    <string name="btn_option">OPTIONS</string>
    <string name="add_plate"></string>

    <string name="nroMesa">MN</string>
    <string name="number">66</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>

    <string name="kitchen">Kitchen</string>
    <string name="finished">Order Done</string>

    <string name="okay_dish"></string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_order_list">OrderList</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="orderCompleted">Order Completed</string>

    
    <string name="Pedido">Order</string>
    <string name="Mesa">#Table</string>
    <string name="Nombre">Name</string>
    <string name="Monto">Amount</string>
    <string name="Lista">List</string>
    <string name="precioUnidad">U.P.</string>
    <string name="precioTotal">T.P.</string>
    <string name="letraFondo">Enter Nº Table</string>
    <string name="total">Total</string>
</resources>
