<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/det_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/det_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/amount"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/det_p_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/empty"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/det_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/empty"
        android:textSize="22sp"/>
</LinearLayout>