<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDish">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorfondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/input_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empty"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_dish_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/input_dish_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empty"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_dish_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/input_dish_desc"
            android:layout_width="match_parent"
            android:layout_height="436dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/empty"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>