<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBackgroundCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/bordelat"
        android:layout_marginTop="@dimen/bordeext"
        android:layout_marginEnd="@dimen/bordelat"
        android:layout_marginBottom="@dimen/bordeext">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dishNameOrderRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/tamCont" />

                <TextView
                    android:id="@+id/dishPriceOrderRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="@dimen/tamCont" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/check_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="@dimen/tamCont"/>

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/empty"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>